Several changes made